tests/assignment/faulty_namespace.sy
use simple as a

start :: fn do
    a = 2
end

// error: $Assignability
